--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name" translatable="false">KidSafe+</string>
+    <string name="logo_description">KidSafe+ logo</string>
     <string name="hello_world" translatable="false">Hello world!</string>
     <string name="action_settings" translatable="false">Settings</string>
     <string name="title_activity_main2" translatable="false">MainActivity</string>
@@ -15,5 +16,6 @@
     <string name="GCMTV">No info.</string>
     <string name="about_us">"KidSafe+ is designed for parents who want to ensure they can find their children whenever they need to. 
         It is not to be used by jealous boyfriends and girlfriend to spy on their partners (although it would work perfectly for that purpose)"</string>
+    <string name="geofence_btn_txt">save restricted area</string>
    
 </resources>
